--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -2,15 +2,30 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Segoe UI", sans-serif;
-  background: linear-gradient(to top right, #e8d9f1, #f8f5fc); /* Ungu lembut */
+  background-color: #f8f9fa;
   height: 100vh;
 }
 
 .login-page {
+  position: relative;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow: hidden;
+}
+
+.wave-header {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 200px;
+  z-index: -1;
+}
+
+.wave-header svg {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 .login-card {
@@ -21,10 +36,13 @@ body {
   text-align: center;
   width: 100%;
   max-width: 400px;
+  margin: auto;
+  margin-top: 160px;
+  z-index: 1;
 }
 
 .login-logo {
-  height: 100px;
+  height: 130px;
   margin-bottom: 30px;
 }
 
@@ -47,14 +65,14 @@ body {
   font-size: 16px;
   border-radius: 25px;
   border: none;
-  background-color: #1565c0; /* Ungu gelap Sarastya */
+  background-color: #1565c0;
   color: white;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
 .login-button:hover {
-  background-color: #1565c0;
+  background-color: #0d47a1;
 }
 
 .login-message {
@@ -63,15 +81,9 @@ body {
 }
 
 .login-footer {
-  margin-top: 20px;
-  font-size: 14px;
-}
-
-.login-footer a {
-  color: #1565c0;
-  text-decoration: none;
-}
-
-.login-footer a:hover {
-  text-decoration: underline;
+  background-color: #1565c0;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+  margin-top: auto;
 }
